@@ -1,8 +1,9 @@
-2018-06-28  Fred Kiefer <fredkiefer@gmx.de>
+2018-07-01  Fred Kiefer <fredkiefer@gmx.de>
 
 	* Source/NSString.m: Small cleanup for printf registration.
 	* Tests/base/NSString/test00.m: Add David Chisnall's test from
 	newapi branch slightly reformatted.
+	* Source/GSString.m: Remove code that was identical to super class.
 
 2018-06-28  Richard Frith-Macdonald <rfm@gnu.org>
 
